force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__Comparator__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Comparator__c</fullName>
    <label>Comparator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>===</fullName>
                <label>Equal to</label>
            </value>
            <value>
                <fullName>!==</fullName>
                <label>Not equal to</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Greater than or equal to</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Less than</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Less than or equal to</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>