force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__CtiAdapter__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CtiAdapter__c</fullName>
    <label>CTI Adapter</label>
    <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
    <relationshipLabel>Presence Sync Rules</relationshipLabel>
    <relationshipName>PresenceSyncRules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>