force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__Destination__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Destination__c</fullName>
    <label>Destination</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACPresenceSyncRuleDestination</valueSetName>
    </valueSet>
</CustomField>