force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__OperandA__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__OperandA__c</fullName>
    <label>Operand A</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACPresenceSyncRuleOperand</valueSetName>
    </valueSet>
</CustomField>