force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__OperandB__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__OperandB__c</fullName>
    <label>Operand B</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>amazonconnect__ACPresenceSyncRuleOperand</valueSetName>
    </valueSet>
</CustomField>