force-app/main/default/objects/amazonconnect__AC_PresenceSyncRule__c/fields/amazonconnect__Value__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Value__c</fullName>
    <label>Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>